# claude-code-to-hermes

./: CHANGELOG.md  MIGRATION_STRATEGY.md  README.md  RELEASE.md  _config.yml  index.html  pyproject.toml
blog/: claude-code-migration.md
docs/: HUB_ARCHITECTURE.md  neudrive-study.md
docs/blog/: index.html
skills/chat-migration/: SKILL.md
skills/claude-full-migration/: SKILL.md
skills/code-migration/: SKILL.md
skills/cowork-migration/: SKILL.md
skills/hermes-migration/: SKILL.md
skills/neudrive-sync/: SKILL.md
src/claude_code_migration/: __init__.py  __main__.py  canonical.py  cowork.py  hub.py  redactor.py  scanner.py
src/claude_code_migration/adapters/: base.py  cursor.py  hermes.py  opencode.py  windsurf.py
src/claude_code_migration/hub/: __init__.py  __main__.py  buffer.py  daemon.py  drain.py  mirror.py  redact.py  supabase_client.py
src/claude_code_migration/hub/captures/: __init__.py  base.py  claude_code_fs.py
src/claude_code_migration/hub/mcp/: __init__.py  server.py  tools.py
src/claude_code_migration/hub/sql/: 0001_dossier_schema.sql  0002_indexes.sql  0003_rls.sql  0004_functions.sql
src/claude_code_migration/sources/: __init__.py  claude_chat_zip.py  claude_code.py  cursor.py  hermes.py  opencode.py  windsurf.py
tests/: test_claude_extras.py  test_claude_md_discovery.py  test_cowork.py  test_cowork_full.py  test_hardening.py  test_hub_buffer.py  test_hub_claude_code_capture.py  test_hub_drain.py  test_hub_integration_offline.py  test_hub_mcp.py  test_hub_redact.py  test_neudrive_client.py  test_redactor.py
