[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-migration"
version = "0.2.0"
description = "Migrate Claude Code / Chat / Cowork workspaces to Hermes / OpenCode / Cursor / Windsurf via a vendor-neutral Workspace Dossier"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Xiaoping Feng", email = "fxp007@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "claude", "claude-code", "migration", "workspace-dossier",
    "hermes", "opencode", "cursor", "windsurf", "neudrive",
    "agent", "llm", "mcp", "vendor-neutral",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov"]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.scripts]
claude-code-migration = "claude_code_migration.__main__:main"
ccm = "claude_code_migration.__main__:main"

[project.urls]
Homepage = "https://fxp.github.io/claude-code-migration/"
Repository = "https://github.com/fxp/claude-code-migration"
Issues = "https://github.com/fxp/claude-code-migration/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_code_migration = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
